<resources>
    <string name="app_name">Memory</string>
    <string name="action_new_album">Album mới</string>
    <string name="action_favorite">Thêm vào yêu thích</string>
    <string name="action_unfavorite">Xóa khỏi yêu thích</string>
    <string name="action_edit">Chỉnh sửa</string>
    <string name="action_share">Chia sẻ</string>
    <string name="action_trash">Thùng rác</string>
    <string name="action_more">Khác</string>
    <string name="action_back">Trở lại</string>
    <string name="action_wallpaper">Đặt làm hình chờ</string>
    <string name="action_lockscreen">Đặt làm hình khóa</string>
    <string name="view_details">Chi tiết</string>
    <string name="action_crop_edit_view">Cắt</string>
    <string name="action_filter_edit_view">Bộ lọc</string>
    <string name="action_brightness_edit_view">Độ sáng</string>
    <string name="action_emote_edit_view">Emote</string>
    <string name="action_text_edit_view">Văn bản</string>
    <string name="action_blur_edit_view">Làm mờ</string>
    <string name="action_back_edit_view">Trờ lại</string>
    <string name="action_save_edit_view">Lưu</string>
    <string name="action_rotate_edit_view">Xoay ảnh</string>
    <string name="action_flip_edit_view">Lật ảnh</string>
    <string name="action_resize_edit_view">Chỉnh ảnh</string>
    <string name="action_draw_edit_view">Vẽ</string>
    <string name="action_sticker_edit_view">Nhãn dán</string>
    <string name="action_search_by_name">Tên</string>
    <string name="action_search_by_album">Album</string>
    <string name="view_album">Xem album</string>
    <string name="query_hint_name">Tìm kiếm theo tên</string>
    <string name="query_hint_album">Tìm kiếm theo album</string>
    <string name="notif_delete_image">Xóa thành công</string>
    <string name="activity_edit_view"></string>
    <string name="activity_image_view">Xem ảnh</string>
    <string name="activity_detail_view">Chi tiết</string>
    <string name="activity_view_search">Tìm kiếm</string>
    <string name="filter_default">Ảnh gốc</string>
    <string name="filter_warm">Ấm</string>
    <string name="filter_cool">Mát lạnh</string>
    <string name="filter_fade">Nhạt</string>
    <string name="filter_gray">Trắng đen</string>
    <string name="filter_flower">Hoa</string>
    <string name="filter_soft">Êm dịu</string>
    <string name="filter_nacreous">Trắng ngà</string>
    <string name="filter_faded">Nhạt dần</string>
    <string name="action_save_image">Lưu ảnh</string>
    <string name="action_back_image">Hoàn tác</string>
    <string name="action_reset_edit">Quay lại</string>
    <string name="action_cancel">Hủy</string>
    <string name="settings">Cài đặt</string>
    <string name="settings_security_album">Bảo mật Album</string>
    <string name="settings_language">Ngôn ngữ</string>
    <string name="settings_dark_mode">Chế độ tối</string>
    <string name="settings_password">Thiết lập mật khẩu</string>
    <string name="settings_delete_password">Xóa mật khẩu</string>
    <string name="settings_change_password">Đổi mật khẩu</string>
    <string name="settings_back">Quay lại cài đặt</string>
    <string name="language_vietnamese">Tiếng Việt (Việt Nam)</string>
    <string name="language_united_states">Tiếng Anh (Mỹ)</string>
    <string name="edit_enter_text">Nhập kí tự</string>
    <string name="bottom_navigation_image">Ảnh</string>
    <string name="bottom_navigation_album">Album</string>
    <string name="bottom_navigation_love">Yêu thích</string>
    <string name="bottom_navigation_more">Khác</string>
    <string name="bottom_navigation_recycle_bin">Thùng rác</string>
    <string name="bottom_navigation_download_from_url">Tải ảnh bằng URL</string>
    <string name="bottom_navigation_settings">Cài đặt</string>
    <string name="bottom_navigation_zip">Zip</string>
    <string name="selection_add_to_album">Thêm vào album</string>
    <string name="selection_remove_from_album">Gỡ khỏi album</string>
    <string name="selection_love">Yêu thích</string>
    <string name="selection_unlove">Bỏ yêu thích</string>
    <string name="selection_delete">Xóa</string>
    <string name="selection_more">Khác</string>
    <string name="selection_duplicate">Tạo bản sao</string>
    <string name="selection_share">Chia sẻ</string>
    <string name="selection_restore">Khôi phục</string>
    <string name="selection_permanently_delete">Xóa vĩnh viễn</string>
    <string name="album_menu_change_name">Đổi tên</string>
    <string name="album_menu_block_album">Khóa album</string>
    <string name="album_menu_remove_album_block">Xóa khóa album</string>
    <string name="album_menu_delete_album">Xóa album</string>
    <string name="album_menu_export_zip">Xuất zip</string>

    <string name="alert_dialog_create_password">Khởi tạo mật khẩu</string>
    <string name="alert_dialog_enter_password_hint">Nhập mật khẩu</string>
    <string name="alert_dialog_confirm_password_hint">Xác nhận mật khẩu</string>
    <string name="alert_dialog_confirm">Đồng ý</string>
    <string name="alert_dialog_cancel">Hủy</string>
    <string name="alert_dialog_blank_password_notification">Vui lòng nhập mật khẩu</string>
    <string name="alert_dialog_blank_confirm_password_notification">Vui lòng xác nhận mật khẩu</string>
    <string name="alert_dialog_not_match_confirm_password_notification">Mật khẩu xác nhận không trùng khớp</string>
    <string name="alert_dialog_create_password_successfully_notification">Khởi tạo mật khẩu thành công</string>
    <string name="alert_dialog_change_password">Đổi mật khẩu</string>
    <string name="alert_dialog_enter_old_password_hint">Nhập mật khẩu cũ</string>
    <string name="alert_dialog_enter_new_password_hint">Nhập mật khẩu mới</string>
    <string name="alert_dialog_confirm_new_password_hint">Xác nhận mật khẩu mới</string>
    <string name="alert_dialog_blank_old_password_notification">Vui lòng nhập mật khẩu cũ</string>
    <string name="alert_dialog_blank_new_password_notification">Vui lòng nhập mật khẩu mới</string>
    <string name="alert_dialog_blank_confirm_new_password_notification">Vui lòng xác nhận mật khẩu mới</string>
    <string name="alert_dialog_wrong_old_password_notification">Mật khẩu cũ không chính xác</string>
    <string name="alert_dialog_change_password_successfully_notification">Đổi mật khẩu thành công</string>
    <string name="alert_dialog_delete_password">Xóa mật khẩu</string>
    <string name="alert_dialog_wrong_password_notification">Mật khẩu không chính xác</string>
    <string name="alert_dialog_delete_password_successfully_notification">Xóa mật khẩu thành công</string>
    <string name="alert_dialog_enter_album_name_hint">Nhập tên album</string>
    <string name="alert_dialog_blank_album_name_notification">Vui lòng nhập tên album</string>
    <string name="alert_dialog_existed_album_name_notification">Tên album đã tồn tại, vui lòng chọn tên khác</string>
    <string name="alert_dialog_create_album_successfully_notification">Tạo album thành công</string>
    <string name="alert_dialog_blocked_album">Album bị khóa. Hãy nhập mật khẩu</string>
    <string name="alert_dialog_unblock_successfully_notification">Mở khóa thành công</string>
    <string name="alert_dialog_change_album_name">Đổi tên album</string>
    <string name="alert_dialog_enter_new_name_hint">Nhập tên mới</string>
    <string name="alert_dialog_change_album_name_successfully_notification">Đổi tên album thành công</string>
    <string name="alert_dialog_delete_album">Xóa album</string>
    <string name="alert_dialog_deleted_album">Đã xóa album </string>
    <string name="alert_dialog_delete_album_confirm">Bạn có chắc muốn xóa</string>
    <string name="alert_dialog_not_setup_password">Mật khẩu album chưa được thiết lập. Vui lòng vào cài đặt để thiết lập</string>
    <string name="alert_dialog_block_album">Khóa album</string>
    <string name="alert_dialog_block_album_successfully_notification">Khóa album thành công</string>
    <string name="alert_dialog_remove_block_album_successfully_notification">Xóa khóa album thành công</string>
    <string name="alert_dialog_remove_block_album">Xóa khóa album</string>
    <string name="alert_dialog_remove_images_from_album_confirm">Bạn có chắc muốn gỡ các ảnh được chọn khỏi album không?</string>
    <string name="alert_dialog_add_images_to_loves_confirm">Bạn có chắc muốn đưa các ảnh vừa chọn vào mục yêu thích không?</string>
    <string name="alert_dialog_delete_images_confirm">Bạn có chắc muốn xóa các ảnh vừa chọn không?</string>
    <string name="alert_dialog_duplicate_images_confirm">Bạn có chắc muốn tạo bản sao các ảnh vừa chọn không?</string>
    <string name="alert_dialog_select_album">Chọn album</string>
    <string name="alert_dialog_remove_images_from_loves_confirm">Bạn có chắc muốn gỡ các ảnh được chọn khỏi mục yêu thích không?</string>
    <string name="alert_dialog_restore_images_confirm">Bạn có chắc muốn khôi phục các ảnh vừa chọn không?</string>
    <string name="alert_dialog_permanently_delete_confirm">Ảnh sẽ bị xóa vĩnh viễn. Bạn có chắc muốn xóa các ảnh vừa chọn không?</string>
    <string name="alert_dialog_export_zip">Xuất zip</string>
    <string name="alert_dialog_enter_file_name_hint">Nhập tên file</string>
    <string name="alert_dialog_blank_file_name_notification">Vui lòng nhập tên file</string>
    <string name="alert_dialog_overwrite_confirm">File đã tồn tại, bạn có muốn ghi đè không?</string>

    <string name="toast_remove_images_from_album">Đã gỡ các ảnh được chọn khỏi album</string>
    <string name="toast_add_images_to_loves">Đã thêm các ảnh được chọn vào mục yêu thích</string>
    <string name="toast_add_duplicate_successfully">Tạo bản sao thành công</string>
    <string name="toast_delete_successfully">Xóa thành công</string>
    <string name="toast_no_albums">Không có album nào trong danh sách. Vui lòng tạo ít nhất một album</string>
    <string name="toast_add_images_to">Đã thêm ảnh vào</string>
    <string name="toast_remove_images_from_loves">Đã gỡ các ảnh được chọn khỏi mục yêu thích</string>
    <string name="toast_deleted">Đã xóa</string>
    <string name="toast_cannot_delete">Không thể xóa</string>
    <string name="toast_restore_successfully">Khôi phục thành công</string>
    <string name="toast_compress_file_successfully">Nén file thành công</string>

    <string name="title_loves">Yêu thích</string>
    <string name="title_recycle_bin">Thùng rác</string>

    <string name="text_name">Tên</string>
    <string name="text_created_date">Ngày tạo</string>
    <string name="text_size">Dung lượng</string>
    <string name="text_dimensions">Kích thước</string>
    <string name="text_location">Vị trí</string>

    <string name="disable_back_edit_view">Ảnh đã quay về trạng thái lúc ban đầu</string>version
    <string name="choose_color_paint">Vui lòng chọn màu để vẽ</string>
    <string name="provide_text">Vui lòng nhập ký tự</string>
    <string name="provide_text_color">Vui lòng chọn màu chữ</string>

</resources>