<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/cropPic"
        android:icon="@mipmap/ic_crop"
        android:title="@string/action_crop_edit_view"/>
    <item android:title="@string/action_filter_edit_view"
        android:id="@+id/filterPic"
        android:icon="@mipmap/ic_filter" />
    <item
        android:id="@+id/brightnessPic"
        android:icon="@mipmap/ic_brightness"
        android:title="@string/action_brightness_edit_view"/>
    <item
        android:id="@+id/emotePic"
        android:icon="@mipmap/ic_emote"
        android:title="@string/action_emote_edit_view"
        />
    <item
        android:id="@+id/morePic"
        android:icon="@mipmap/ic_more"
        android:title="@string/action_other_edit_view"
        />
</menu>