<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/settings_security_album"
            android:textColor="?attr/colorSurface"
            android:textSize="24sp" />

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_shape_conner_10"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/txtSetupPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/settings_password"
                android:textColor="?attr/colorSurface"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <View
                android:id="@+id/dividerSetupPassword"
                style="@style/Divider" />

            <TextView
                android:id="@+id/txtDeletePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/settings_delete_password"
                android:textColor="?attr/colorSurface"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <View
                android:id="@+id/dividerDeletePassword"
                style="@style/Divider" />

            <TextView
                android:id="@+id/txtChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/settings_change_password"
                android:textColor="?attr/colorSurface"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <View
                style="@style/Divider" />

            <TextView
                android:id="@+id/txtBack2Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/settings_back"
                android:textColor="?attr/colorSurface"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>